[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberpulse"
version = "0.1.3"
description = "Risk-based vulnerability fix list generator"
# … other fields …
dependencies = [
    "click>=8",
    "sqlalchemy>=2",
    "llama-cpp-python>=0.2.86",
    "PyYAML>=6.0",
    "openai>=0.27.0",
    "xmltodict>=0.12.0",
]

[project.optional-dependencies]
# Install with: pip install "cyberpulse[server]"
server = ["llama-cpp-python[server]>=0.2.86"]

[project.scripts]
cyberpulse = "cyberpulse.cli:cli"
